k8s/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-server
  name: python-http-server
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - image: geraudk2000/python-http-server:v0.1.3
        name: python-http-server
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - http-server
              topologyKey: "kubernetes.io/hostname"
