k8s/2-python-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: python-http-service
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    nodePort: 30080
  selector:
    app: http-server
  type: NodePort
