k8s/3-python-http-clusterIp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: python-http-service
  namespace: dev
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: http-server
  type: ClusterIP
